--- a/reilAutomation.ipynb
+++ b/reilAutomation.ipynb
@@ -104,7 +104,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "### Target the occupations that 1. In Real Estate industry 2. Not General Group 3. Onet has surveyed\n"
+        "### Target the occupations that are 1. In Real Estate industry 2. Not General Group 3. Onet has surveyed\n"
       ]
     },
     {
