--- a/reilAutomation.ipynb
+++ b/reilAutomation.ipynb
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "[View in Colaboratory](https://colab.research.google.com/github/MuddyCharles/autonomousfuture/blob/master/reilAutomation.ipynb)"
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/MuddyCharles/autonomousfuture/blob/master/reilAutomation.ipynb)"
       ]
     },
     {
@@ -70,22 +70,39 @@
       "metadata": {
         "id": "P0atFUe0D2JX",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "b6b48dd8-78a2-4c84-bc7b-96e422043e0d"
       },
       "cell_type": "code",
       "source": [
-        "!wget \"https://www.dropbox.com/s/2y7c9yo93nyq8uh/combined.sqlite?dl=0\" -q -O  \"onet.sqlite\"  \n",
+        "!wget \"https://www.dropbox.com/s/5cjlzvxqtoq5mm4/combined.sqlite?dl=0\" -q -O  \"combined.sqlite\"  \n",
         "#Download raw SQLite file from Dropbox and rename to \"onet.sqlite\"\n",
         "import sqlite3\n",
-        "onetConnection = sqlite3.connect('onet.sqlite')\n",
+        "onetConnection = sqlite3.connect('combined.sqlite')\n",
         "cur = onetConnection.cursor()\n",
         "query = \"SELECT * FROM occupation_data\";\n",
-        "occdata = pandas.read_sql_query(query, onetConnection)\n",
+        "occdata = pd.read_sql_query(query, onetConnection)\n",
         "len(occdata)\n",
         "# Onet surveyed 1109 occupations.\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1109"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
     },
     {
       "metadata": {
@@ -111,11 +128,7 @@
       "metadata": {
         "id": "MpdkLpRlZ9UR",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 68
-        },
-        "outputId": "02878034-246c-43bc-ce9d-28ee434953b2"
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
@@ -126,39 +139,18 @@
         "#Delete the occupation if the code is not in 'Occupation Data'\n",
         "del_occ_endwith_00_and_in_Onet.shape"
       ],
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "Redirecting output to ‘wget-log.15’.\n"
-          ],
-          "name": "stdout"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "(22026, 61)"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 21
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
         "id": "NGLAv20Bd5qR",
         "colab_type": "code",
+        "outputId": "815f8fb9-a023-4207-c51c-9ff29585032a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "02c828e1-ef2a-4b2d-9d43-0027671a1613"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -168,7 +160,7 @@
         "len(target)\n",
         "# we target 558 occupations."
       ],
-      "execution_count": 26,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -180,7 +172,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 7
         }
       ]
     },
@@ -198,11 +190,11 @@
       "metadata": {
         "id": "LmSKkbK8fJon",
         "colab_type": "code",
+        "outputId": "cafb69f8-f8a1-4db8-bbeb-1bd9b3c850ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "c6114f66-a386-429b-e9f1-13d45cac46d0"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -212,7 +204,7 @@
         "# the columns # decrease to 37 from 61\n",
         "del_duplicated_column.shape"
       ],
-      "execution_count": 27,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -224,7 +216,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 8
         }
       ]
     },
@@ -242,11 +234,11 @@
       "metadata": {
         "id": "zK-dVy5ShHTW",
         "colab_type": "code",
+        "outputId": "3d5d42b4-52a7-41fb-df32-1131dce55fd1",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 142
-        },
-        "outputId": "691aeae4-e9e9-4ec4-a5cc-516278f6b57a"
+          "height": 136
+        }
       },
       "cell_type": "code",
       "source": [
@@ -254,7 +246,7 @@
         "dx = del_duplicated_column[del_duplicated_column['occ_code'] == '11-1011']\n",
         "dx[['year','naics_title', 'tot_emp_num']].head(3)"
       ],
-      "execution_count": 28,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -316,7 +308,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 28
+          "execution_count": 9
         }
       ]
     },
@@ -353,11 +345,11 @@
       "metadata": {
         "id": "7JNwpGFQhdRp",
         "colab_type": "code",
+        "outputId": "742355ab-1396-4f7f-fc31-8dd41b157cf8",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 272
-        },
-        "outputId": "d82a62c5-922e-40f2-a55c-0cf12f1fa3b2"
+          "height": 299
+        }
       },
       "cell_type": "code",
       "source": [
@@ -369,7 +361,7 @@
         "aa=lb_econ ('11-1011','tot_emp_num',data1)\n",
         "aa.head()"
       ],
-      "execution_count": 31,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -561,7 +553,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 11
         }
       ]
     },
@@ -574,6 +566,19 @@
       "source": [
         ""
       ]
+    },
+    {
+      "metadata": {
+        "id": "nN28f25Yimga",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
